// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LocationInfo renders with distance 1`] = `
<div>
  <div
    class="location-info size-base"
  >
    <div
      class="location"
    >
      <span
        class="base-icon"
      >
        <!---->
      </span>
      
    Paris
  
    </div>
     
    <div
      class="distance"
    >
      location.distance
    </div>
  </div>
</div>
`;

exports[`LocationInfo renders without distance 1`] = `
<div>
  <div
    class="location-info size-base"
  >
    <div
      class="location"
    >
      <span
        class="base-icon"
      >
        <!---->
      </span>
      
    Paris
  
    </div>
     
    <!---->
  </div>
</div>
`;
